[package]
name = "bing_map"
version = "0.1.0"
authors = ["menglimeng <dream_15320@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
