[package]
name = "gdal_test"
version = "0.1.0"
authors = ["menglimeng <dream_15320@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = {version = "0.9.0", features = ["ndarray"]}
gdal-sys = "0.5.0"
ndarray = "0.15.3"
clap = "2.3.33"
threadpool = "1.0"

