[package]
name = "gdal_test"
version = "0.1.0"
authors = ["menglimeng <dream_15320@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = {version = "0.9.0", features = ["ndarray"]}
gdal-sys = "0.5.0"
ndarray = "0.15.3"
clap = "2.3.33"
threadpool = "1.8.1"
libc = "0.2"
rstar = "0.9.1"
glob = "0.3.0"
xml-rs = "0.8"
# log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
log = "0.4"
env_logger = "0.9.0"
